# backend/customer/api/customer/customer_grpc.pb.go
@@ -1,0 +1,146 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v4.25.0
+// source: api/customer/customer.proto
+
+package customer
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	Customer_GetVerifyCode_FullMethodName = "/api.customer.Customer/GetVerifyCode"
+	Customer_Login_FullMethodName         = "/api.customer.Customer/Login"
+)
+
+// CustomerClient is the client API for Customer service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type CustomerClient interface {
+	GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequst, opts ...grpc.CallOption) (*GetVerifyCodeResponse, error)
+	Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginResponse, error)
+}
+
+type customerClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewCustomerClient(cc grpc.ClientConnInterface) CustomerClient {
+	return &customerClient{cc}
+}
+
+func (c *customerClient) GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequst, opts ...grpc.CallOption) (*GetVerifyCodeResponse, error) {
+	out := new(GetVerifyCodeResponse)
+	err := c.cc.Invoke(ctx, Customer_GetVerifyCode_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *customerClient) Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginResponse, error) {
+	out := new(LoginResponse)
+	err := c.cc.Invoke(ctx, Customer_Login_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// CustomerServer is the server API for Customer service.
+// All implementations must embed UnimplementedCustomerServer
+// for forward compatibility
+type CustomerServer interface {
+	GetVerifyCode(context.Context, *GetVerifyCodeRequst) (*GetVerifyCodeResponse, error)
+	Login(context.Context, *LoginRequest) (*LoginResponse, error)
+	mustEmbedUnimplementedCustomerServer()
+}
+
+// UnimplementedCustomerServer must be embedded to have forward compatible implementations.
+type UnimplementedCustomerServer struct {
+}
+
+func (UnimplementedCustomerServer) GetVerifyCode(context.Context, *GetVerifyCodeRequst) (*GetVerifyCodeResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetVerifyCode not implemented")
+}
+func (UnimplementedCustomerServer) Login(context.Context, *LoginRequest) (*LoginResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Login not implemented")
+}
+func (UnimplementedCustomerServer) mustEmbedUnimplementedCustomerServer() {}
+
+// UnsafeCustomerServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to CustomerServer will
+// result in compilation errors.
+type UnsafeCustomerServer interface {
+	mustEmbedUnimplementedCustomerServer()
+}
+
+func RegisterCustomerServer(s grpc.ServiceRegistrar, srv CustomerServer) {
+	s.RegisterService(&Customer_ServiceDesc, srv)
+}
+
+func _Customer_GetVerifyCode_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetVerifyCodeRequst)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).GetVerifyCode(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Customer_GetVerifyCode_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).GetVerifyCode(ctx, req.(*GetVerifyCodeRequst))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Customer_Login_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(LoginRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).Login(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Customer_Login_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).Login(ctx, req.(*LoginRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Customer_ServiceDesc is the grpc.ServiceDesc for Customer service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Customer_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.customer.Customer",
+	HandlerType: (*CustomerServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetVerifyCode",
+			Handler:    _Customer_GetVerifyCode_Handler,
+		},
+		{
+			MethodName: "Login",
+			Handler:    _Customer_Login_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/customer/customer.proto",
+}
